[gd_scene format=3 uid="uid://bct2lmly0xl5"]

[ext_resource type="Texture2D" uid="uid://bw47w45mhiux7" path="res://sprites/Other/enzo_main_menu.png" id="1_33vt4"]
[ext_resource type="Script" uid="uid://bbmf78s13lqcp" path="res://scenes/MainMenu/main.gd" id="1_ogjy5"]
[ext_resource type="AudioStream" uid="uid://cmr2yve2xlukn" path="res://sounds/UI/click_001.ogg" id="2_6m1aa"]
[ext_resource type="Texture2D" uid="uid://lam0x8abon5q" path="res://sprites/UI/start.png" id="2_n18p5"]
[ext_resource type="Texture2D" uid="uid://ps2gmdjgkd4q" path="res://sprites/UI/volume.png" id="2_twgkd"]
[ext_resource type="Texture2D" uid="uid://dnotses3xwawc" path="res://sprites/UI/start_pressed.png" id="3_ogjy5"]
[ext_resource type="Texture2D" uid="uid://b2262pcje7yur" path="res://sprites/UI/volume_pressed.png" id="3_y4ns4"]
[ext_resource type="Texture2D" uid="uid://bjll5vu8400m1" path="res://sprites/UI/start_hover.png" id="4_6m1aa"]
[ext_resource type="Texture2D" uid="uid://c4om6ubet3ymc" path="res://sprites/UI/volume_hover.png" id="4_rxupv"]
[ext_resource type="Texture2D" uid="uid://b1ypufr2psx0g" path="res://sprites/UI/exit.png" id="5_y4ns4"]
[ext_resource type="Texture2D" uid="uid://qubhxbjjvypp" path="res://sprites/UI/exit_pressed.png" id="6_mo1hc"]
[ext_resource type="Texture2D" uid="uid://ceu3a3c2oam6h" path="res://sprites/UI/exit_hover.png" id="7_nmfl3"]

[node name="Main" type="CanvasLayer" unique_id=551817714 node_paths=PackedStringArray("audio_manager")]
script = ExtResource("1_ogjy5")
audio_manager = NodePath("AudioManager")

[node name="AudioManager" type="AudioStreamPlayer2D" parent="." unique_id=5993000]
stream = ExtResource("2_6m1aa")

[node name="TextureRect" type="TextureRect" parent="." unique_id=1600625607]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_33vt4")

[node name="Buttons" type="VBoxContainer" parent="." unique_id=1116094849]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.0
offset_top = -58.0
offset_right = 3.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)

[node name="Start" type="TextureButton" parent="Buttons" unique_id=156560708]
layout_mode = 2
texture_normal = ExtResource("2_n18p5")
texture_pressed = ExtResource("3_ogjy5")
texture_hover = ExtResource("4_6m1aa")

[node name="Volume" type="TextureButton" parent="Buttons" unique_id=1908396461]
layout_mode = 2
texture_normal = ExtResource("2_twgkd")
texture_pressed = ExtResource("3_y4ns4")
texture_hover = ExtResource("4_rxupv")

[node name="Exit" type="TextureButton" parent="Buttons" unique_id=1831514591]
layout_mode = 2
texture_normal = ExtResource("5_y4ns4")
texture_pressed = ExtResource("6_mo1hc")
texture_hover = ExtResource("7_nmfl3")

[connection signal="pressed" from="Buttons/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Buttons/Volume" to="." method="_on_volume_pressed"]
[connection signal="pressed" from="Buttons/Exit" to="." method="_on_exit_pressed"]
